--- a/webyast/Gemfile
+++ b/webyast/Gemfile
@@ -9,7 +9,7 @@ gem 'devise-i18n'
 gem 'devise_unix2_chkpwd_authenticatable'
 gem 'cancan'
 
-gem "sqlite3"
+gem "sqlite3", '>= 1.3.6'
 
 gem 'haml'
 
