--- a/plugins/time/config/resources/system_time.yml
+++ b/plugins/time/config/resources/system_time.yml
@@ -1,10 +1,6 @@
 interface: org.opensuse.yast.modules.yapi.time
-controller: systemtime
+controller: time
 singular: true
-#cache:
-#  enabled: true/false
-#  priority: -100..100
-#  reload_after: seconds (0 == do not reload)
 cache:
   enabled: false
 
