--- a/plugins/software/Rakefile
+++ b/plugins/software/Rakefile
@@ -52,3 +52,13 @@ task :build => [:"gettext:pack", :clean_gems]
 create_online_help_task "Repositories"
 create_online_help_task "Updates"
 
+task :restdoc_dir do
+  restdoc_target = "public/restdoc/software"
+  if !File.exist? restdoc_target
+    puts "Creating directory #{restdoc_target}"
+    FileUtils.mkdir_p restdoc_target
+  end
+end
+
+task :restdoc => :restdoc_dir
+
