--- a/plugins/roles/test/fixtures/roles.yml
+++ b/plugins/roles/test/fixtures/roles.yml
@@ -1,6 +1,6 @@
 test: 
   - org.opensuse.yast.test
-  - org.opensuse.yast.test-lest
+  - org.opensuse.yast.test.lest
 test2:
   - org.opensuse.yast.test2
 test3:
