build the REST documentation during RPM build

--- a/plugins/registration/Rakefile
+++ b/plugins/registration/Rakefile
@@ -30,3 +30,13 @@ task :build => [:"gettext:pack", :clean_gems]
 
 create_online_help_task "Registration"
 
+task :restdoc_dir do
+  restdoc_target = "public/restdoc/registration"
+  if !File.exist? restdoc_target
+    puts "Creating directory #{restdoc_target}"
+    FileUtils.mkdir_p restdoc_target
+  end
+end
+
+task :restdoc => :restdoc_dir
+
