Fixed restdoc build (bnc#805282)

--- a/plugins/time/Rakefile
+++ b/plugins/time/Rakefile
@@ -31,3 +31,12 @@ task :build => [:"gettext:pack", :clean_gems]
 
 create_online_help_task "Time"
 
+task :restdoc_dir do
+  restdoc_target = "public/restdoc/time"
+  if !File.exist? restdoc_target
+    puts "Creating directory #{restdoc_target}"
+    FileUtils.mkdir_p restdoc_target
+  end
+end
+
+task :restdoc => :restdoc_dir
