--- a/plugins/roles/Rakefile
+++ b/plugins/roles/Rakefile
@@ -63,3 +63,13 @@ task :build => [:"gettext:pack", :clean_gems]
 
 create_online_help_task "Roles"
 
+task :restdoc_dir do
+  restdoc_target = "public/restdoc/roles"
+  if !File.exist? restdoc_target
+    puts "Creating directory #{restdoc_target}"
+    FileUtils.mkdir_p restdoc_target
+  end
+end
+
+task :restdoc => :restdoc_dir
+
