correct debugger gem name is "ruby-debug19"

--- a/webyast/Gemfile
+++ b/webyast/Gemfile
@@ -71,7 +71,7 @@ if File.exists? File.expand_path("../../.git",  __FILE__)
       # needed for rake gettext:find
       gem 'ruby_parser'
 
-      gem "ruby-debug"
+      gem "ruby-debug19"
     end
 end
 
