--- a/webyast/Gemfile
+++ b/webyast/Gemfile
@@ -72,7 +72,7 @@ if File.exists? File.expand_path("../../.git",  __FILE__)
       # needed for rake gettext:find
       gem 'ruby_parser'
 
-      gem "ruby-debug"
+      #gem "debugger"
     end
 end
 
