--- a/webyast/Gemfile
+++ b/webyast/Gemfile
@@ -58,7 +58,6 @@ group :development do
 end
 
 group :test do
-  gem "factory_girl_rails"
   gem "mocha",  :require => false
 end
 
@@ -74,7 +73,8 @@ if File.exists? File.expand_path("../../.git",  __FILE__)
       # needed for rake gettext:find
       gem 'ruby_parser'
 
-      #gem "debugger"
+      # uncomment to enable debugger support
+      # gem "debugger"
     end
 end
 
